# tpp-pytorch-extension

./: .gitmodules  Makefile  README.md  setup.py  tpp_bakeoff_template.sh
examples/alphafold/: attention_example.py  attention_example_bf16.py  fused2_triangle_multiplication_example.py  fused2_triangle_multiplication_example_bf16.py  triangle_multiplication_example.py  triangle_multiplication_example_bf16.py
examples/bert/pretrain_mlperf/: modeling_bert_patched.py  requirements.txt  run_pretrain_mlperf.py
examples/bert/squad/: cmd_infer.sh  generate_cache.sh  requirements.txt  run_all_lat.sh  run_all_lat_atvnni.sh  run_all_lat_bf8.sh  run_all_lat_gvt.sh  run_all_thp.sh  run_all_thp_gvt.sh  run_squad.py
examples/cnn/: Efficiency_test.py  README.md  conv1d_example.py  torch_example.py  unet_example.py
examples/cnn/Conv1dOpti-extension/: Conv1dOpti_ext.py
examples/dlrm/: run_mlp.py  run_perceptron.py
examples/gnn/IGBH/: README.md
examples/gnn/IGBH/dataset/: convert_features.py  cvt.sh
examples/gnn/IGBH/eval/: aux_func_eval.py  dist_eval_rgat.py  eval_hetero.py  lp_dataset.py  mlperf_logging_utils.py  rgat.py  rgat_dist_eval.slurm  run_dist_eval.sh  run_eval.sh
examples/gnn/IGBH/partition/: partition_graph.py  partition_graph.sh  post_process_part.py  struct.graph
examples/gnn/IGBH/sources/: apply_patch.sh
examples/gnn/IGBH/torch_mpi/: LICENSE  README.md  setup.py  test.py
examples/gnn/IGBH/train/: aux_func.py  dist_train_rgat.py  lp_dataset.py  train_hetero.py
examples/gnn/gat/: main.py
examples/llm/: README.txt  numawrap.sh  prompt.json  prompt.txt  requirements.txt  run_2s.sh  run_bench_chatllama.py  run_bench_codeqwen.py  run_first_token.py  run_generation.py  run_gptj.py  run_spec_decode_llama_70b.py  test_shm_allreduce.py  tpp_bakeoff_template.sh
src/csrc/: bfloat8.h  common_loops.cpp  ext_tpp.h  float8.h  fused_gemm.h  init.cpp  init.h  mxfp_quant.h  optim.cpp  pytorch_extension_wrapper.h  qtypes.cpp  qtypes.h  sfc_ca_gemm_tpp.h  shm_coll.cpp  shm_coll.h  tensor_helper.h  threaded_loops.h  timing.h  utils.h  vla.h  xsmm.cpp  xsmm_functors.h
src/csrc/alphafold/: Alpha_Attention.cpp  fused2_triangle_multiplication_fwd_tmpl.h  fused2_triangle_multiplication_fwd_tmpl_bf16.h  fused_gating_attention_fwd_tmpl.h  fused_gating_attention_fwd_tmpl_bf16.h  fused_triangle_multiplication_fwd_tmpl.h  fused_triangle_multiplication_fwd_tmpl_bf16.h
src/csrc/bert/infer/: fused_bert.cpp
src/csrc/bert/pad/: fused_embedding_layernorm_dropout_bwd_tmpl.h  fused_self_attention_fwd_tmpl.h
src/csrc/bert/unpad/: fused_bert.cpp  fused_dense_dropout_layernorm_bwd_tmpl.h  fused_dense_dropout_layernorm_fwd_tmpl.h  fused_dense_gelu_bwd_tmpl.h  (+4 more)
src/csrc/cnn/: Conv1dOpti.cpp
src/csrc/dlrm/: embbag.cpp  mlp.cpp  mlp_bwd_tmpl.h  mlp_fwd_tmpl.h  perceptron.cpp  perceptron_bwd_tmpl.h  perceptron_fwd_tmpl.h
src/csrc/ffn_bench/: FFN_bench.cpp  compile_and_run.sh  init.cpp  py_FFN_bench.py
src/csrc/flash_attention_bench/: MHA_attention_bench.cpp  MHA_copy.cpp  blocked_gating_attention_fwd_tmpl.h  blocked_gating_attention_fwd_tmpl_bf16.h  blocked_weight_gating_attention_fwd_tmpl.h  blocked_weight_gating_attention_fwd_tmpl_bf16.h  compile_and_run.sh  fused_gating_attention_fwd_tmpl.h  fused_gating_attention_fwd_tmpl_bf16.h
src/csrc/llm/: attn.cpp  attn.h  fused_gptj_infer.cpp  fused_llm_infer.cpp  mxfp_quant.hpp
src/csrc/sfc_ca_gemm/: knn_model.c  knn_model.h  knn_model_emr.c  knn_model_emr.h  knn_model_gnr.c  knn_model_gnr.h  roofline_predictor.c  roofline_predictor.h  sfc_utils.h
src/csrc/turboquant/: CMakeLists.txt  compile_and_run.sh
src/csrc/turboquant/include/: rotation.h
src/csrc/turboquant/src/: init.cpp  main.cpp  rotation.cpp
src/csrc/turboquant/tests/: QR_test.cpp
src/tpp_pytorch_extension/: __init__.py  nn.py  optim.py  qtypes.py
src/tpp_pytorch_extension/alphafold/: Alpha_FusedTriangleMultiplication.py  __init__.py
src/tpp_pytorch_extension/bert/: __init__.py  fused_bert.py  fused_bert_infer.py  fused_bert_unpad.py
src/tpp_pytorch_extension/cnn/: Conv1dOpti_ext.py  __init__.py
src/tpp_pytorch_extension/dlrm/: __init__.py  embbag.py  mlp.py  perceptron.py  trec_mlp.py
src/tpp_pytorch_extension/llm/: fused_gptj_infer.py  fused_llama_infer.py  fused_opt_infer.py  fused_qwen2_infer.py  llm_common.py
src/tpp_pytorch_extension/utils/: blocked_layout.py  extend_profiler.py  float8.py  omp_signal.py  xsmm.py
utils/: build_omptrace.sh  install_torch_ccl.sh  omptrace.c  run_dist.sh  run_dist_ht.sh  run_dist_numa.sh  setup_conda.sh
(+104 files in other folders)
